--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
-    <link rel="dns-prefetch" href="//cangdu.org">
-    <link rel="dns-prefetch" href="//elm.cangdu.org">
-    <link rel="shortcut icon" type="image/x-icon" href="/static/img/favicon.ico"/>
-    <title>徒步者</title>
+    <title>vue2-happyfri</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+    	<router-view></router-view>
+    </div>
   </body>
 </html>
